Исправление ошибки запуска из-за сканирования JPA-репозиториев