@@ -9,9 +9,6 @@ import reactor.core.publisher.Mono;
 import java.util.ArrayList;
 import java.util.List;
 
-/**
- * Сервис-оркестратор, управляющий конвейером AI-агентов для обработки запросов.
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -22,32 +19,44 @@ public class QueryProcessingPipeline {
     private final MultiQueryGeneratorAgent multiQueryGeneratorAgent;
     private final StepBackQueryAgent stepBackQueryAgent;
 
-    /**
-     * Асинхронно выполняет весь конвейер агентов для заданного запроса.
-     */
     public Mono<ProcessedQueries> process(String query) {
-        log.info("Запуск параллельного конвейера обработки запроса с HyDE.");
-        Mono<List<String>> hydeMono = hydeAgent.enhance(query);
-        Mono<List<String>> transformationMono = transformationAgent.enhance(query);
-        Mono<List<String>> expansionMono = multiQueryGeneratorAgent.enhance(query);
-        Mono<List<String>> stepBackMono = stepBackQueryAgent.enhance(query);
-        return Mono.zip(hydeMono, transformationMono, expansionMono, stepBackMono)
-                .map(tuple -> {
-                    // Используем результат HyDE как основной (самый сильный) поисковый запрос
-                    String primaryQuery = tuple.getT1().isEmpty() ? query : tuple.getT1().getFirst();
+        log.info("Запуск последовательного конвейера обработки запроса.");
+        // Этап 1: HyDE - самый мощный, запускаем его первым.
+        return hydeAgent.enhance(query)
+                .flatMap(hydeResult -> {
+                    String primaryQuery = hydeResult.isEmpty() ? query : hydeResult.get(0);
                     List<String> expansionQueries = new ArrayList<>();
-                    expansionQueries.addAll(tuple.getT2()); // Трансформированный запрос
-                    expansionQueries.addAll(tuple.getT3()); // Multi-query
-                    expansionQueries.addAll(tuple.getT4()); // Step-back
-                    // Удаляем дубликаты и основной запрос из списка расширений
-                    List<String> uniqueExpansion = expansionQueries.stream()
-                            .filter(q -> !q.equalsIgnoreCase(primaryQuery) && !q.equalsIgnoreCase(query))
-                            .distinct()
-                            .toList();
-                    ProcessedQueries result = new ProcessedQueries(primaryQuery, uniqueExpansion);
-                    log.info("Конвейер завершен. Primary (HyDE): '{}...', Expansion ({} шт): {}",
-                            StringUtils.left(result.primaryQuery(), 70), result.expansionQueries().size(), result.expansionQueries());
-                    return result;
+                    // Этап 2: Трансформация - для извлечения ключевых слов.
+                    return transformationAgent.enhance(query)
+                            .flatMap(transformedResult -> {
+                                expansionQueries.addAll(transformedResult);
+                                // Этап 3 (опциональный): Если трансформация не дала хороших ключевых слов,
+                                // запускаем MultiQuery и StepBack для генерации идей.
+                                if (transformedResult.size() <= 1 && transformedResult.get(0).equals(query)) {
+                                    log.debug("Трансформация не дала результата, запускаем MultiQuery и StepBack.");
+                                    Mono<List<String>> multiQueryMono = multiQueryGeneratorAgent.enhance(query);
+                                    Mono<List<String>> stepBackMono = stepBackQueryAgent.enhance(query);
+                                    return Mono.zip(multiQueryMono, stepBackMono)
+                                            .map(tuple -> {
+                                                expansionQueries.addAll(tuple.getT1());
+                                                expansionQueries.addAll(tuple.getT2());
+                                                return buildResult(query, primaryQuery, expansionQueries);
+                                            });
+                                }
+                                return Mono.just(buildResult(query, primaryQuery, expansionQueries));
+                            });
                 });
+    }
+
+    private ProcessedQueries buildResult(String originalQuery, String primaryQuery, List<String> expansionQueries) {
+        List<String> uniqueExpansion = expansionQueries.stream()
+                .filter(q -> !q.equalsIgnoreCase(primaryQuery) && !q.equalsIgnoreCase(originalQuery))
+                .distinct()
+                .toList();
+
+        ProcessedQueries result = new ProcessedQueries(primaryQuery, uniqueExpansion);
+        log.info("Конвейер завершен. Primary: '{}...', Expansion ({} шт): {}",
+                StringUtils.left(result.primaryQuery(), 70), result.expansionQueries().size(), result.expansionQueries());
+        return result;
     }
 }
